[package]
name = "executor"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
log4rs = "0.13.0"
clap = "3.0.0-beta.1"
git-version = "0.3.4"
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto", tag = "v0.1.0" }
